<resources>
    <string name="app_name">telegram-profile</string>
    <string name="username">Mohammed Sofyan</string>
    <string name="isOnline">online</string>
    <string name="account">Account</string>
    <string name="_970_123456789">+970 123456789</string>
    <string name="tap_to_change_phone_number">Tap to change phone number</string>
    <string name="usernameText">Username</string>
    <string name="hastag">#</string>
    <string name="bio">Bio</string>
    <string name="abc123">\@abc123</string>
</resources>