<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d2733"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">


    <View
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="#263342"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/image_profile"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:scaleType="fitXY"
        android:background="@drawable/image_profile"
        app:layout_constraintEnd_toEndOf="@+id/app_bar"
        app:layout_constraintStart_toStartOf="@+id/app_bar"
        app:layout_constraintTop_toTopOf="@+id/app_bar" />

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="@+id/app_bar"
        app:layout_constraintStart_toStartOf="@+id/app_bar"
        app:layout_constraintTop_toTopOf="@id/app_bar" />


    <ImageView
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="@+id/app_bar"
        app:layout_constraintTop_toTopOf="@+id/app_bar" />


    <ImageView
        android:id="@+id/iv_barCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_menu"
        app:layout_constraintEnd_toStartOf="@+id/iv_menu"
        app:layout_constraintTop_toTopOf="@+id/iv_menu"
        app:srcCompat="@drawable/ic_baseline_qr_code_24" />

    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_barCode"
        app:layout_constraintEnd_toEndOf="@+id/iv_menu"
        app:layout_constraintStart_toEndOf="@+id/iv_barCode"
        app:layout_constraintTop_toTopOf="@+id/iv_barCode"
        app:srcCompat="@drawable/ic_baseline_search_24" />


    <ImageView
        android:id="@+id/iv_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="@id/app_bar"
        app:layout_constraintTop_toTopOf="@id/app_bar" />

    <View
        android:id="@+id/view_text"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/app_bar"
        app:layout_constraintEnd_toEndOf="@+id/app_bar"
        app:layout_constraintStart_toStartOf="@id/app_bar" />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/username"
        android:textColor="#E5EAF0"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/app_bar"
        tools:layout_editor_absoluteY="251dp" />

    <TextView
        android:id="@+id/tv_isOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isOnline"
        android:textColor="#848991"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="320dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="16sp"
                android:textColor="#4EABF3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_numberPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_970_123456789"
                android:textSize="16sp"
                android:textColor="#E5EAF0"
                app:layout_constraintStart_toStartOf="@+id/tv_account"
                app:layout_constraintTop_toBottomOf="@+id/tv_account" />

            <TextView
                android:id="@+id/tv_detailsPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tap_to_change_phone_number"
                android:textColor="#8F9BA9"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_numberPhone"
                app:layout_constraintTop_toBottomOf="@+id/tv_numberPhone" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"

                android:background="#121c28"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailsPhone" />

            <TextView
                android:id="@+id/tv_usernames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/abc123"
                android:textSize="16sp"
                android:textColor="#E5EAF0"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/usernameText"
                android:textColor="#8F9BA9"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_usernames"
                app:layout_constraintTop_toBottomOf="@+id/tv_usernames" />

            <View
                android:id="@+id/dividerTwo"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#121c28"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />

            <TextView
                android:id="@+id/tv_hastag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hastag"
                android:textSize="16sp"
                android:textColor="#E5EAF0"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone"
                app:layout_constraintTop_toBottomOf="@id/dividerTwo"
                app:layout_constraintTop_toTopOf="@+id/dividerTwo" />

            <TextView
                android:id="@+id/tv_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/bio"
                android:textColor="#8F9BA9"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_usernames"
                app:layout_constraintTop_toBottomOf="@+id/tv_hastag" />

            <View
                android:id="@+id/dividerThree"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="12dp"
                android:background="#121c28"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone"
                app:layout_constraintTop_toBottomOf="@+id/tv_bio" />

            <TextView
                android:id="@+id/tv_account2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="16sp"
                android:textColor="#4EABF3"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerThree" />

            <TextView
                android:id="@+id/tv_numberPhone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_970_123456789"
                android:textSize="16sp"
                android:textColor="#E5EAF0"
                app:layout_constraintStart_toStartOf="@+id/tv_account2"
                app:layout_constraintTop_toBottomOf="@+id/tv_account2" />

            <TextView
                android:id="@+id/tv_detailsPhone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tap_to_change_phone_number"
                android:textColor="#8F9BA9"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_numberPhone2"
                app:layout_constraintTop_toBottomOf="@+id/tv_numberPhone2" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#121c28"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone2"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailsPhone2" />

            <TextView
                android:id="@+id/tv_usernames2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/abc123"
                android:textSize="16sp"
                android:textColor="#E5EAF0"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone2"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

            <TextView
                android:id="@+id/tv_username2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/usernameText"
                android:textColor="#8F9BA9"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_usernames2"
                app:layout_constraintTop_toBottomOf="@+id/tv_usernames2" />

            <View
                android:id="@+id/dividerTwo2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#121c28"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone2"
                app:layout_constraintTop_toBottomOf="@+id/tv_username2" />

            <TextView
                android:id="@+id/tv_hastag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hastag"
                android:textSize="16sp"
                android:textColor="#E5EAF0"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone2"
                app:layout_constraintTop_toBottomOf="@id/dividerTwo2"
                app:layout_constraintTop_toTopOf="@+id/dividerTwo2" />

            <TextView
                android:id="@+id/tv_bio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/bio"
                android:textColor="#8F9BA9"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_usernames2"
                app:layout_constraintTop_toBottomOf="@+id/tv_hastag2" />

            <View
                android:id="@+id/dividerThree2"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="12dp"
                android:background="#121c28"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone2"
                app:layout_constraintTop_toBottomOf="@+id/tv_bio2" />

            <TextView
                android:id="@+id/tv_account3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="16sp"
                android:textColor="#4EABF3"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerThree2" />

            <TextView
                android:id="@+id/tv_numberPhone3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_970_123456789"
                android:textSize="16sp"
                android:textColor="#E5EAF0"
                app:layout_constraintStart_toStartOf="@+id/tv_account3"
                app:layout_constraintTop_toBottomOf="@+id/tv_account3" />

            <TextView
                android:id="@+id/tv_detailsPhone3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tap_to_change_phone_number"
                android:textColor="#8F9BA9"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_numberPhone3"
                app:layout_constraintTop_toBottomOf="@+id/tv_numberPhone3" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#121c28"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone3"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailsPhone3" />

            <TextView
                android:id="@+id/tv_usernames3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/username"
                android:textSize="16sp"
                android:textColor="#E5EAF0"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone3"
                app:layout_constraintTop_toBottomOf="@id/divider3" />

            <TextView
                android:id="@+id/tv_username3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/usernameText"
                android:textColor="#8F9BA9"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_usernames3"
                app:layout_constraintTop_toBottomOf="@+id/tv_usernames3" />

            <View
                android:id="@+id/dividerTwo3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="#121c28"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone3"
                app:layout_constraintTop_toBottomOf="@+id/tv_username3" />

            <TextView
                android:id="@+id/tv_hastag3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hastag"
                android:textSize="16sp"
                android:textColor="#E5EAF0"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone3"
                app:layout_constraintTop_toBottomOf="@id/dividerTwo3"
                app:layout_constraintTop_toTopOf="@+id/dividerTwo3" />

            <TextView
                android:id="@+id/tv_bio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/bio"
                android:textColor="#8F9BA9"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_usernames3"
                app:layout_constraintTop_toBottomOf="@+id/tv_hastag3" />

            <View
                android:id="@+id/dividerThree3"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="12dp"
                android:background="#121c28"
                app:layout_constraintStart_toStartOf="@+id/tv_detailsPhone3"
                app:layout_constraintTop_toBottomOf="@+id/tv_bio3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="-24dp"
        android:backgroundTint="#68b4e5"
        android:src="@drawable/ic_baseline_add_a_photo_24"

        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="@+id/app_bar"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.motion.widget.MotionLayout>